--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "monent": "*",
+    "vant": "^2.12.14",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1"
   },
